<resources>
    <string name="app_name">Music Wave</string>
    <string name="music_poster_content_description">Music poster</string>
    <string name="search_hint">Поиск треков...</string>
    <string name="favorite_icon_content_description">Добавить в избранное</string>
    <string name="menu_change_theme">Сменить тему</string>
    <string name="menu_change_language">Сменить язык</string>
    <string name="theme_changed">Тема изменена</string>
    <string name="language_changed">Язык изменен</string>
    <string name="favorites_title">Избранные треки</string>
    <string name="categories_title">Категории</string>
    <string name="home_tab">Главная</string>
    <string name="favorites_tab">Избранное</string>
    <string name="categories_tab">Категории</string>
    <string name="player_tab">Плеер</string>
    <string name="category_metal">Тяжелая музыка</string>
    <string name="category_pop">Поп музыка</string>
    <string name="category_electronic">Электронная музыка</string>
    <string name="category_classical">Классическая музыка</string>
    <string name="playlist_add_hint">Добавьте трек в избранное, чтобы получился плэйлист</string>
    <string name="queue_title">Очередь воспроизведения</string>
    <string name="show_playlist_desc">Показать весь плейлист</string>
    <string name="sleep_timer_title">Таймер сна</string>
    <string name="sleep_timer_desc">Выключить через:</string>
    <string name="minutes_10">10 минут</string>
    <string name="minutes_15">15 минут</string>
    <string name="minutes_20">20 минут</string>
    <string name="minutes_25">25 минут</string>
    <string name="minutes_30">30 минут</string>
    <string name="timer_off">Выключить таймер</string>
    <string name="timer_set">Таймер установлен на %1$d мин.</string>
    <string name="timer_stopped">Таймер остановлен</string>
    <string name="sleep_timer_content_description">Таймер сна</string>
    <string name="share_content_description">Поделиться треком</string>
    <string name="download_content_description">Скачать трек</string>
    <string name="share_text">Слушаю трек %1$s от %2$s в приложении Music Wave!</string>
    <string name="download_started">Загрузка началась...</string>
    <string name="download_already_exists">Этот трек уже скачан</string>
    <string name="download_failed">Ошибка загрузки</string>
    <string name="no_local_tracks">Локальные треки не найдены</string>
    <string name="local_tracks_tab">Моя музыка</string>
    <string name="local_folders">Каталоги</string>
    <string name="all_local_tracks">Все треки</string>
    <string name="folder_jamendo">Загрузки Jamendo</string>
    <string name="show_lyrics">Показать текст</string>
    <string name="no_lyrics_found">Текст песни не найден</string>
    <string name="loading_lyrics">Загрузка текста...</string>
    <string name="delete_track_title">Удалить файл?</string>
    <string name="delete_track_message">Вы действительно хотите удалить %1$s с устройства?</string>
    <string name="delete_confirm">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="local_file_desc">Локальный файл</string>
    <string name="delete_file_desc">Удалить локальный файл</string>
    <string name="track_deleted">Трек удален</string>
    <string name="delete_failed">Не удалось удалить файл</string>
    <string name="search_tab">Поиск</string>
    <string name="recommendation_title">Рекомендуем сегодня:</string>
    <string name="listen_now">Слушать</string>
    <string name="remind_later">Напомнить позже</string>
    <string name="reminder_set">Напоминание установлено на %1$s</string>
    <string name="reminder_delete_confirm">Этот трек включится в %1$s, вы хотите удалить это напоминание?</string>
    <string name="reminder_removed">Напоминание удалено</string>
    <string name="daily_recommendation_notif_title">Ваш трек дня!</string>
    <string name="daily_recommendation_notif_text">Мы подобрали кое-что особенное</string>
    <string name="error_no_internet">Отсутствует подключение к интернету</string>
    <string name="error_loading">Ошибка при загрузке данных</string>
    <string name="playback_error">Ошибка воспроизведения. Проверьте подключение</string>
    <string name="error_slow_connection">Медленное соединение. Пожалуйста, подождите...</string>
    <string name="first_launch_scan_title">Музыка на устройстве</string>
    <string name="first_launch_scan_message">На вашем устройстве обнаружены музыкальные треки, добавить их в приложение?</string>
    <string name="new_tracks_scan_message">На вашем устройстве обнаружены новые музыкальные треки, добавить их в приложение?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit_track_title">Редактирование трека</string>
    <string name="edit_file_name">Имя файла</string>
    <string name="edit_track_name">Название песни</string>
    <string name="edit_album">Альбом</string>
    <string name="edit_artist">Исполнитель</string>
    <string name="edit_genre">Жанр</string>
    <string name="edit_year">Год</string>
    <string name="rename_success">Трек переименован</string>
    <string name="rename_error">Не удалось переименовать трек</string>
    <string name="rename_permission_required">Требуется разрешение на изменение файла</string>
</resources>