<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_tab" />
    <item
        android:id="@+id/navigation_player"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/player_tab" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_star"
        android:title="@string/favorites_tab" />
    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_settings"
        android:title="@string/categories_tab" />
    <item
        android:id="@+id/navigation_local"
        android:icon="@drawable/ic_lyrics"
        android:title="@string/local_tracks_tab" />
</menu>